[tool.poetry]
name = "inseguranca-alimentar"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "inseguranca_alimentar"}]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"
xgboost = "^2.0.2"
scikit-learn = "^1.3.2"
icecream = "^2.1.3"
shap = "^0.44.0"
lightgbm = "^4.1.0"
catboost = "^1.2.2"
alibi = "^0.9.4"
umap-learn = "^0.5.5"
keras = "^3.0.5"
jax = "^0.4.24"
jaxlib = "^0.4.24"
tensorflow = "^2.15.0.post1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
